# Generate-BOQ-with-Formula-Flask-API

./: .gitignore  API_USAGE.md  BOQ_API_Postman_Collection.json  BOQ_Generation_API.postman_collection.json  Dockerfile  FILE_STRUCTURE.md  POSTMAN_USAGE.md  README.md  app.py  boq_formula_mapping.json  extract_boq_formulas.py  extractor.py  extractor_final_sum.py  formula_final_sum_template.json  formula_template.json  main.py  merge_templates.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
api/: app.py  routes.py  session_manager.py
src/: main_carriageway_template.py  sequential.py
src/internal/: final_sum_applier.py  formula_applier.py  pavement_input_with_internal.py  recalc.py
src/processor/: boq_populator.py  calculator.py  constant_fill.py  emb_height.py  pavement_input.py  run_all.py  tcs_input.py  tcs_schedule.py
src/utils/: gcs_utils.py
template/: BOQ.xlsx
