[project]
name = "generate-boq-with-formula-flask-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "et-xmlfile==2.0.0",
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "numpy==2.3.4",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "pymongo==4.15.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "redis==7.0.0",
    "six==1.17.0",
    "tzdata==2025.2",
    "werkzeug==3.1.3",
    "xlrd==2.0.2",
]
